alignment:fix

--- a/fastor-home/styles/footer.css
+++ b/fastor-home/styles/footer.css
@@ -98,7 +98,7 @@
   z-index: -1; 
 }
 .marginScalingImg{
-  margin-bottom: -2%;
+  margin-bottom: -7%;
 }
 .footer__left {
   display: flex;
